# lockfix

./: .gitignore  Cargo.toml  README.md  example.json  vulnfix_cli_summary.md
benches/: plan_runner.rs
docs/: apply.md  npm.md  plan.md
src/: lib.rs  main.rs
src/commands/apply/: runner.rs
src/commands/plan/: mod.rs  model.rs  runner.rs  runner_par.rs
src/config/: mod.rs  tests.rs
src/package_manager/: mod.rs  npm.rs  package_json.rs  pnpm.rs  tests.rs  yarn.rs
src/scm/: git.rs  gitlab.rs  mod.rs
src/utils/: command.rs  mod.rs
