[package]
name = "lockfix"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
which = "8.0.0"
git2  = "0.20.4"
rayon = "1.10"

[dev-dependencies]
tempfile  = "3.26.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "plan_runner"
harness = false
